@@ -67,9 +67,7 @@ ___fsmul:
 ;	ora	*(___fsmul_PARM_2 + 1)
 ;	ora	*___fsmul_PARM_2
 	beq	ret_zero
-;	jmp ___fs_ret_zero
 
-;p2_not0:
 	ldy	#0x00
 	jsr ___fs_unpack_2P
 	
@@ -81,11 +79,11 @@ ___fsmul:
 	; s2 is now free
 	sty *s2
 	sec
-    lda *exp1
-    sbc #126    ; excess
-;    sta *exp1
-    bcs no_borrow
-    dec *s2
+	lda *exp1
+	sbc #126    ; excess
+;	sta *exp1
+	bcs no_borrow
+	dec *s2
 no_borrow:
 	clc
 ;	lda *exp1
@@ -128,88 +126,84 @@ loop1:
 	adc *___fsmul_PARM_1+2
 	sta *mres3
 skip_add1:
-    ror *mres3
-    ror *mres2
-    ror *mres1
-    ror *mres0
-    dey
-    bne loop1
-    inx 
-    cpx #3
-    bne loop2
+	ror *mres3
+	ror *mres2
+	ror *mres1
+	ror *mres0
+	dey
+	bne loop1
+	inx 
+	cpx #3
+	bne loop2
     
 ; round
-     bit *mres3
-     bmi end
-     jmp end7
-     bpl not_24  ; MSB not set
-     asl *mres0
-     bcc end     ; MSB set and rounding will not change the result
-	 jsr add3
-     jmp end     ; MSB set
+	bit *mres3
+	bmi end
+	jmp end7
+	bpl not_24  ; MSB not set
+	asl *mres0
+	bcc end     ; MSB set and rounding will not change the result
+	jsr add3
+	jmp end     ; MSB set
 ret_zero:
 	jmp ___fs_ret_zero
 not_24:
-     bit *mres0
-     bvc end7    ; adding 0x40 will not change the result - shift 7
-     bpl need_add
-     lda #0x80  ; res0 is 01xx xxxx adding 0x40 produces 10xx xxxx
-     sta *mres0
-     bne end7
+	bit *mres0
+	bvc end7    ; adding 0x40 will not change the result - shift 7
+	bpl need_add
+	lda #0x80  ; res0 is 01xx xxxx adding 0x40 produces 10xx xxxx
+	sta *mres0
+	bne end7
 need_add:
-     clc
-     lda *mres0
-     adc #0x40
-     sta *mres0
-     jsr add3
-     bit *mres3
-     bpl end7
-     lda *mres0
-     adc #0x40
-     sta *mres0
-     jsr add3
-     bpl end7
-     bmi end
+	clc
+	lda *mres0
+	adc #0x40
+	sta *mres0
+	jsr add3
+	bit *mres3
+	bpl end7
+	lda *mres0
+	adc #0x40
+	sta *mres0
+	jsr add3
+	bpl end7
+	bmi end
 	
 end7:
-    asl *mres0
-    rol *mres1
-    rol *mres2
-    rol *mres3
-    sec
-    lda *exp1
-    sbc #1
-    sta *exp1
-    bcs no_borrow2
-    dec *s2
+	asl *mres0
+	rol *mres1
+	rol *mres2
+	rol *mres3
+	sec
+	lda *exp1
+	sbc #1
+	sta *exp1
+	bcs no_borrow2
+	dec *s2
 no_borrow2:
 
 end:
-    lda *s2
-;    bmi res_zero
-    bmi ret_zero
-    bne res_inf
-    lda *___SDCC_m6502_ret2
-    and #0x7f
-    sta *___SDCC_m6502_ret2
+	lda *s2
+	bmi ret_zero
+	bne res_inf
+	lda *___SDCC_m6502_ret2
+	and #0x7f
+	sta *___SDCC_m6502_ret2
 	jmp ___fs_pack_ret
 
-;res_zero:
-;    jmp ___fs_ret_zero
-    
 res_inf:
-    lda *s1
-    jmp ___fs_ret_inf
+	lda *s1
+	jmp ___fs_ret_inf
 
 add3:
-     lda *mres1
-     adc #0
-     sta *mres1
-     lda *mres2
-     adc #0
-     sta *mres2
-     lda *mres3
-     adc #0
-     sta *mres3
-     rts
-	
+	lda *mres1
+	adc #0
+	sta *mres1
+	lda *mres2
+	adc #0
+	sta *mres2
+	lda *mres3
+	adc #0
+	sta *mres3
+	rts
+
